[tool.poetry]
name = "bbh"
version = "0.1.0"
description = "Best bidirectional hits with exonerate."
authors = ["carrascomj <carrascomurielj@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.1"
click = "^8.0.4"
sultan = "^0.9.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
